--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@
   user-select: none;
 }
 
+#trip-sequence-list {
+  transition: transform 0.3s ease;
+}
+
 #trip-sequence-list .drag-handle {
   pointer-events: auto !important;
 }
@@ -79,6 +83,11 @@
 .sortable-ghost {
   opacity: 0.5;
   background: rgba(255, 255, 255, 0.1);
+  transition: transform 0.2s ease-in !important;
+}
+
+.sortable-chosen {
+  transition: transform 0.2s ease-out !important;
 }
 
 #trip-sequence-list li {
