--- a/style.css
+++ b/style.css
@@ -127,3 +127,17 @@
 }
 
 /* Error Alert */
+#global-error {
+  position: fixed;
+  top: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 600px;
+  z-index: 9999;
+  box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.15);
+  display: none !important; /* Keep hidden by default */
+}
+
+#global-error.show {
+  display: block !important;
+}
